--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "typed.js": "^2.0.16",
+    "waypoints": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
